--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@mui/x-date-pickers": "8.5.1",
     "@phosphor-icons/react": "2.1.10",
     "apexcharts": "4.7.0",
+    "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dayjs": "1.11.13",
     "next": "15.3.3",
     "react": "19.1.0",
@@ -43,6 +45,7 @@
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.28.0",
     "@ianvs/prettier-plugin-sort-imports": "4.4.2",
+    "@netlify/plugin-nextjs": "^5.12.0",
     "@next/eslint-plugin-next": "15.3.3",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
