--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,3 @@
 [build]
   command = "npm run build"
-  publish = ".netlify/output"
-  functions = "netlify/functions"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-[dev]
-  functions = "netlify/functions"
+  publish = "out"
