--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "author": "Devias",
   "licence": "MIT",
   "homepage": "https://devias.io",
-  "private": false,
+  "private": false, 
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -46,7 +46,6 @@
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.28.0",
     "@ianvs/prettier-plugin-sort-imports": "4.4.2",
-    "@netlify/plugin-nextjs": "^5.12.0",
     "@next/eslint-plugin-next": "15.3.3",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
