--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": false, 
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
