--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Devias",
   "licence": "MIT",
   "homepage": "https://devias.io",
-  "private": false, 
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -34,7 +34,10 @@
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "dayjs": "1.11.13",
+    "file-saver": "^2.0.5",
     "gh": "^2.8.9",
+    "jspdf": "^3.0.1",
+    "jszip": "^3.10.1",
     "next": "15.3.3",
     "react": "^18.2.0",
     "react-apexcharts": "1.7.0",
