--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "@mui/utils": "7.1.1",
     "@mui/x-date-pickers": "8.5.1",
     "@phosphor-icons/react": "2.1.10",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.55.0",
     "apexcharts": "4.7.0",
     "axios": "^1.11.0",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "dayjs": "1.11.13",
     "file-saver": "^2.0.5",
@@ -49,6 +53,7 @@
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.28.0",
     "@ianvs/prettier-plugin-sort-imports": "4.4.2",
+    "@netlify/plugin-nextjs": "^5.12.0",
     "@next/eslint-plugin-next": "15.3.3",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
